--- a/style.css
+++ b/style.css
@@ -8,7 +8,20 @@ body {
   color: white;
 }
 
-#instructions {
+.instructions {
+  z-index: 10000;
+  visibility: visible;
+  width: 25%;
+  text-align: left;
+  letter-spacing: 0.15rem;
+  color: #fff;
+  margin: 1%;
+  font-weight: 100;
+  position: absolute;
+  font-size:0.75rem;
+}
+
+button {
   z-index: 10000;
   visibility: visible;
   width: 25%;
