--- a/style.css
+++ b/style.css
@@ -21,7 +21,20 @@ menu{
   font-size:0.75rem;
 }
 
-.instructions {
+button{
+  z-index: 10000;
+  visibility: visible;
+  /*width: 25%;*/
+  text-align: left;
+  letter-spacing: 0.15rem;
+  color: #fff;
+  margin: 1%;
+  font-weight: 100;
+  position: absolute;
+  font-size:0.75rem;
+}
+
+.instructions{
   z-index: 10000;
   visibility: visible;
   /*width: 25%;*/
@@ -32,17 +45,5 @@ menu{
   font-weight: 100;
   /*position: absolute;*/
   font-size:0.75rem;
-}
-
-button {
-  z-index: 10000;
-  visibility: visible;
-  width: 25%;
-  text-align: left;
-  letter-spacing: 0.15rem;
-  color: #fff;
-  margin: 1%;
-  font-weight: 100;
-  position: absolute;
-  font-size:0.75rem;
+  background-color: black;
 }
