--- a/style.css
+++ b/style.css
@@ -39,11 +39,11 @@ button{
   visibility: visible;
   /*width: 25%;*/
   /*text-align: left;*/
-  letter-spacing: 0.15rem;
+  /*letter-spacing: 0.15rem;*/
   color: #fff;
   /*margin: 1%;*/
   font-weight: 100;
   /*position: absolute;*/
-  font-size:0.75rem;
+  font-size:8px;
   background-color: black;
 }
