--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ button{
   font-size:0.75rem;
 }
 
+.dropdown-menu{
+  background-color: black;
+}
+
 .instructions{
   z-index: 10000;
   visibility: visible;
