--- a/style.css
+++ b/style.css
@@ -63,5 +63,5 @@ a:hover{
   /*position: absolute;*/
   font-size:0.75rem;
   background-color: black;
-  border: 1px solid white;
+  border: 1px solid black;
 }
