update style.css show visibility

--- a/style.css
+++ b/style.css
@@ -79,6 +79,19 @@ p{
   font-weight: 100;
   /*position: absolute;*/
   font-size:0.75rem;
-  background-color: black;
-  border: 1px solid black;
+  /*border: 1px solid white;*/
+}
+
+.col-md-4{
+  z-index: 10000;
+  visibility: visible;
+  /*width: 25%;*/
+  text-align: left;
+  letter-spacing: 0.15rem;
+  color: #fff;
+  /*margin: 1%;*/
+  font-weight: 100;
+  /*position: absolute;*/
+  font-size:0.75rem;
+  border: 1px solid white;
 }
