--- a/style.css
+++ b/style.css
@@ -84,7 +84,6 @@ p{
 
 .col-md-4{
   z-index: 10000;
-  padding-top: 50px;
   visibility: visible;
   /*width: 25%;*/
   text-align: left;
@@ -94,6 +93,21 @@ p{
   font-weight: 100;
   /*position: absolute;*/
   font-size:0.75rem;
-  opacity: 0.5;
   border: 1px solid white;
+}
+
+#results{
+  padding: 15px;
+}
+
+.retro-row{
+  width: 25%;
+}
+
+.ganesha-row{
+  width: 25%;
+}
+
+.aztro.-row{
+  width: 25%;
 }
