--- a/style.css
+++ b/style.css
@@ -110,7 +110,8 @@ p{
   z-index: 10000;
   visibility: visible;
   position: absolute;
-  right: 0;
+  right: 50px;
+  top: 50px;
   padding: 15px;
   text-align: center;
   border: 1px solid white;
