styling planet info 7

--- a/style.css
+++ b/style.css
@@ -110,9 +110,10 @@ p{
   z-index: 10000;
   visibility: visible;
   position: absolute;
-  right: 100px;
-  top: 150px;
+  right: 120px;
+  top: 140px;
   padding: 15px;
   text-align: center;
+  font-size:0.5rem;
   border: 1px solid white;
 }
