--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ p{
   border: 1px solid white;
 }
 
-.instructions{
+#instructions{
   z-index: 10000;
   visibility: visible;
   letter-spacing: 0.15rem;
