--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ p{
   color: #fff;
   font-weight: 100;
   position: absolute;
-  right: 28px;
-  top: 30px;
+  right: 32px;
+  top: 0;
   padding: 10px;
   font-size:0.7rem;
   background-color: black;
