--- a/style.css
+++ b/style.css
@@ -151,3 +151,15 @@ p{
   bottom: 0;
   left: 0;
 }
+
+#horoscopes{
+  left:10px;
+  margin-right:10px;
+  top:10px;
+}
+
+#results{
+  left:10px;
+  margin-right:10px;
+  top:10px;
+}
